app/tools/homepage/homepage-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: tools
  labels:
    app.kubernetes.io/name: homepage
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      # app: homepage
      app.kubernetes.io/name: homepage
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        # app: homepage
        app.kubernetes.io/name: homepage
    spec:
      serviceAccountName: homepage
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      containers:
      - name: homepage
        image: "ghcr.io/gethomepage/homepage:v0.9.6"
        imagePullPolicy: Always
        ports:
          - name: http
            containerPort: 3000
            protocol: TCP
        # MountVolume.SetUp failed for volume "kube-api-access ca.crt no space left
        resources:
          limits: # you restrict the maximum amount of memory available to the pods
            memory: "1024M"
            cpu: "500m"
          requests: # allow you to allocate a guaranteed minimum of computing resources for the pods r
            memory: "256M"
            cpu: "250m"
        volumeMounts:
          - mountPath: /app/config/custom.js
            name: homepage-config
            subPath: custom.js
          - mountPath: /app/config/custom.css
            name: homepage-config
            subPath: custom.css
          - mountPath: /app/config/bookmarks.yaml
            name: homepage-config
            subPath: bookmarks.yaml
          - mountPath: /app/config/docker.yaml
            name: homepage-config
            subPath: docker.yaml
          - mountPath: /app/config/kubernetes.yaml
            name: homepage-config
            subPath: kubernetes.yaml
          - mountPath: /app/config/services.yaml
            name: homepage-config
            subPath: services.yaml
          - mountPath: /app/config/settings.yaml
            name: homepage-config
            subPath: settings.yaml
          - mountPath: /app/config/widgets.yaml
            name: homepage-config
            subPath: widgets.yaml
          - mountPath: /app/config/logs
            name: logs
      restartPolicy: Always
      volumes:
        - name: homepage-config
          configMap:
            name: homepage
        - name: logs
          emptyDir: {}
status: {}
