app/tools/homepage/homepage-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: tools
  labels:
    app.kubernetes.io/name: homepage
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    # app: homepage
    app.kubernetes.io/name: homepage
  type: LoadBalancer
  # if type: LoadBalancer is enabled than comment out INGRESS section below
status:
  loadBalancer: {}
