app/tools/homepage/homepage-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Media Server
    gethomepage.dev/group: Cluster Management
    gethomepage.dev/icon: homepage.png
    gethomepage.dev/name: Homepage
    # gethomepage.dev/widget.type: "homepage"
    # gethomepage.dev/widget.url: "http://homepage.home.adaminformatika.hu/"
    # gethomepage.dev/pod-selector: ""
    # gethomepage.dev/weight: 10 # optional
    # gethomepage.dev/instance: "public" # optional
  name: homepage
  namespace: tools
  labels:
    app.kubernetes.io/name: homepage
spec:
  ingressClassName: traefik
  rules:
  - host: &host "homepage.home.adaminformatika.hu"
    http:
      paths:
      - backend:
          service:
            name: homepage
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - *host
    secretName: *host
